--- a/src/mainsection.scss
+++ b/src/mainsection.scss
@@ -39,26 +39,31 @@
     }
 
     // search result table style
-    ul{
-        list-style-type: none;
-        padding: 0;
-        width: 70%;
-        margin: auto;
+    .search-table{
+        border-collapse: collapse;
+        width: 100%;
+        margin-top: 1rem;
 
-        li{
-            border: 1px solid #ddd;
-            margin-bottom: 10px;
+        th{
+            border:1px solid #ddd;
+            text-align: left;
             padding: 10px;
+            color: white;
+        }
 
-            strong{
-                font-size: 18px;
-            }
 
-            span{
-                font-size: 14px;
+        tbody{
+            tr{
+                margin-bottom: 10px;
+                
+                td{
+                    border: 1px solid #ddd;
+                    padding: 10px;
+                }
             }
         }
     }
+
 
     .terms{
         margin-top: 3rem;
