--- a/src/heading.scss
+++ b/src/heading.scss
@@ -31,3 +31,41 @@
         border-radius: 2rem;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .heading{
+        display: block;
+        justify-content: space-between;
+        padding: 4rem 2rem;
+        border-bottom-right-radius: 4rem;
+        border-bottom-left-radius: 4rem;
+        background-color: header.$bgColor;
+    
+        .intro{
+            font-size: 25px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            margin-top: 12rem;
+    
+            span{
+                color: header.$primaryColor;
+            }
+        }
+    
+        .btn{
+            border: 2px solid header.$primaryColor;
+            background-color: header.$bgColor;
+            color: header.$secondaryColor;
+            padding: .5rem;
+            margin-top: 2rem;
+            border-radius: .5rem;
+        }
+    
+        img{
+            border-radius: 1rem;
+            position: absolute;
+            top: 5.5rem;
+            width: 60%;
+        }
+    }
+    
+}
