--- a/src/heading.scss
+++ b/src/heading.scss
@@ -35,7 +35,6 @@
 @media screen and (max-width: 480px) {
     .heading{
         display: block;
-        justify-content: space-between;
         padding: 4rem 2rem;
         border-bottom-right-radius: 4rem;
         border-bottom-left-radius: 4rem;
@@ -44,7 +43,8 @@
         .intro{
             font-size: 25px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            margin-top: 12rem;
+            margin-top: 13rem;
+            margin-left: 1.5rem;
     
             span{
                 color: header.$primaryColor;
@@ -56,7 +56,7 @@
             background-color: header.$bgColor;
             color: header.$secondaryColor;
             padding: .5rem;
-            margin-top: 2rem;
+            margin:1rem 1.5rem;
             border-radius: .5rem;
         }
     
@@ -64,7 +64,8 @@
             border-radius: 1rem;
             position: absolute;
             top: 5.5rem;
-            width: 60%;
+            width: 75%;
+            margin: 0 1.5rem;
         }
     }
     
