--- a/src/footer.scss
+++ b/src/footer.scss
@@ -33,7 +33,7 @@
         .footer{
             display: flex;
             justify-content: space-between;
-            margin: 0 2rem;
+            margin: 0 .5rem;
             padding: .5rem 0;
     
             .logo{
@@ -48,7 +48,7 @@
             a{
                 color: header.$primaryColor;
                 text-decoration: none;
-                font-size: 12px;
+                font-size: 10px;
             }
         }
     }
